--- a/GitStars/en.lproj/Localizable.strings
+++ b/GitStars/en.lproj/Localizable.strings
@@ -6,7 +6,46 @@
   
 */
 
-"ascendingText" = "Ascending";
-"aescendingText" = "Descending";
+// MARK: texts for buttons
+"ascendingTitle" = "Ascending";
+"aescendingTitle" = "Descending";
+"repositoryLinkTitle" = "Link of repository";
+"makeFavoriteTitle" = "Make a favorite";
+"undoFavoriteTitle" = "Undo favorite";
+"reloadTitle" = "Reload";
 
+// MARK: titles for views
+"homeTitle" = "List";
+"favoriteTitle" = "Favorites";
+"teamTitle" = "Team";
+"repositoryDetailTitle" = "Name of repository";
+"errorAlertTitle" = "Error";
+"teamDetailTitle" = "Name";
 
+// MARK: titles for tab bar
+"homeTabBarTitle" = "Home";
+"favoriteTabBarTitle" = "Favorites";
+"teamTabBarTitle" = "Team";
+
+// MARK: default prefixes and texts for labels
+"defaultDescriptionText" = "No description";
+"authorPrefix" = "Author";
+"defaultAuthorText" = "Name of the author";
+"watchersPrefix" = "Count of watchers";
+"creationDatePrefix" = "Date of creation";
+"licensePrefix" = "License";
+"defaultLicenseText" = "MIT License";
+"defaultNoLicenseText" = "No License";
+"defaultDeveloperAboutText" = "Tell us about you.";
+"phonePrefix" = "Phone";
+"emailPrefix" = "Email";
+"defaultEmailText" = "steva.jobs@apple.com.br";
+"linkedinPrefix" = "Linkedin";
+"defaultLinkedinText" = "linkedin.com/in/";
+"githubPrefix" = "Github";
+"defaultGithubText" = "github.com/";
+
+// MARK: messages and texts
+"errorMessageTitle" = "Oops... 👀";
+"errorMessageDescription" = "Sorry, the service cannot be run.
+    \nTry again later";
