--- a/GitStars/fr.lproj/Localizable.strings
+++ b/GitStars/fr.lproj/Localizable.strings
@@ -7,45 +7,45 @@
 */
 
 // MARK: texts for buttons
-"ascendingTitle" = "Ascending";
-"descendingTitle" = "Descending";
-"repositoryLinkTitle" = "Link of repository";
-"makeFavoriteTitle" = "Make a favorite";
-"undoFavoriteTitle" = "Undo favorite";
-"reloadTitle" = "Reload";
+"ascendingTitle" = "Ascendant";
+"descendingTitle" = "Décroissant";
+"repositoryLinkTitle" = "Lien de Référentiel";
+"makeFavoriteTitle" = "Favori";
+"undoFavoriteTitle" = "Défavorisé";
+"reloadTitle" = "Recharger";
 
 // MARK: titles for views
-"homeTitle" = "List";
-"favoriteTitle" = "Favorites";
-"teamTitle" = "Team";
-"repositoryDetailTitle" = "Name of repository";
-"errorAlertTitle" = "Error";
-"teamDetailTitle" = "Name";
+"homeTitle" = "Référentiels";
+"favoriteTitle" = "Favoris";
+"teamTitle" = "Équipe";
+"repositoryDetailTitle" = "Nome do repositório";
+"errorAlertTitle" = "Erreur";
+"teamDetailTitle" = "Nom";
 
 // MARK: titles for tab bar
-"homeTabBarTitle" = "Repo";
-"favoriteTabBarTitle" = "Favorites";
-"teamTabBarTitle" = "Team";
+"homeTabBarTitle" = "Référentiels";
+"favoriteTabBarTitle" = "Favoris";
+"teamTabBarTitle" = "Équipe";
 
 // MARK: default prefixes and texts for labels
-"defaultDescriptionText" = "No description";
-"authorPrefix" = "Author";
-"defaultAuthorText" = "Name of the author";
-"watchersPrefix" = "Count of watchers";
-"creationDatePrefix" = "Date of creation";
-"licensePrefix" = "License";
-"defaultLicenseText" = "MIT License";
-"defaultNoLicenseText" = "No License";
-"defaultDeveloperAboutText" = "Tell us about you.";
-"phonePrefix" = "Phone";
+"defaultDescriptionText" = "Sans descriptif";
+"authorPrefix" = "Auteur";
+"defaultAuthorText" = "Nom de l'auteur";
+"watchersPrefix" = "Nombre d'observateurs";
+"creationDatePrefix" = "Date de Création";
+"licensePrefix" = "Licence";
+"defaultLicenseText" = "Licence MIT";
+"defaultNoLicenseText" = "Pas de Licence";
+"defaultDeveloperAboutText" = "Parlez nous de vous.";
+"phonePrefix" = "Téléphone";
 "emailPrefix" = "Email";
-"defaultEmailText" = "steva.jobs@apple.com.br";
+"defaultEmailText" = "jean.valjean@oscar.com.br";
 "linkedinPrefix" = "Linkedin";
 "defaultLinkedinText" = "linkedin.com/in/";
 "githubPrefix" = "Github";
 "defaultGithubText" = "github.com/";
 
 // MARK: messages and texts
-"errorMessageTitle" = "Oops... 👀";
-"errorMessageDescription" = "Sorry, the service cannot be run.
-Try again later.";
+"errorMessageTitle" = "Oups... 👀";
+"errorMessageDescription" = "Désolé, le service ne peut pas fonctionner.
+Réessayez plus tard.";
