feat: onboarding view

--- a/GitStars/es.lproj/Localizable.strings
+++ b/GitStars/es.lproj/Localizable.strings
@@ -49,3 +49,9 @@
 "errorMessageTitle" = "Ups... 👀";
 "errorMessageDescription" = "Lo sentimos, el servicio no puede ejecutarse.
 Vuelva a intentarlo más tarde.";
+
+// MARK: Onboarding
+"onboardingTitle" = "Bienvenido a GitStars 🌟";
+"githubLabel" = "Explore los repositorios más favoritos para sus idiomas favoritos";
+"favoritesLabel" = "Marca como favoritos los repositorios que más te gusten para seguirlos";
+"orderLabel" = "Buscar desde la mayoría de los favoritos o menos favoritos";
