--- a/GitStars/pt-BR.lproj/Localizable.strings
+++ b/GitStars/pt-BR.lproj/Localizable.strings
@@ -49,3 +49,9 @@
 "errorMessageTitle" = "Opa... 👀";
 "errorMessageDescription" = "Desculpe, o serviço não pode ser executado.
 Tente novamente mais tarde.";
+
+// MARK: Onboarding
+"onboardingTitle" = "Bem vindo ao GitStars 🌟";
+"githubLabel" = "Explore os repositórios mais favoritados das suas linguagens preferidas";
+"favoritesLabel" = "Favorite os repositórios que mais gostar para acompanhá-los";
+"orderLabel" = "Pesquise a partir dos mais favoritados ou menos favoritados";
