--- a/GitStars/Resources/pt-BR.lproj/Localizable.strings
+++ b/GitStars/Resources/pt-BR.lproj/Localizable.strings
@@ -9,7 +9,7 @@
 // MARK: texts for buttons
 "ascendingTitle" = "Ascendente";
 "descendingTitle" = "Descendente";
-"repositoryLinkTitle" = "Link do Repositório";
+"repositoryLinkTitle" = "Link do Repositório →";
 "makeFavoriteTitle" = "Favoritar";
 "undoFavoriteTitle" = "Desfavoritar";
 "reloadTitle" = "Recarregar";
